...
    getAllLocationsApi('locationSearch', setBuildings);
  }

  return (
    <>
      {/* <SearchBar placeholder={'Filter search results'} changeText={setQuery} /> */}
      <View testID="LocationSearch1">
        <Text style={{textAlign: 'center', fontSize: 20, marginTop: 20}}>
          All Locations
        </Text>
        <View style={styles.buildingList}>
          <BuildingList
            buildings={buildings}
...
