...
      navigation.navigate('ChangePassword');
    }
  }

  return (
    <>
      <View testID="Profile1" style={CommonStyle.outerContainerStyle}>
        {showModal ? (
          <ConfirmModal
            setShowModal={showModal}
            title={modalTitle}
            message={modalMessage}
            decline={() => decline()}
...
